--- a/src/app/core/navbar/navbar.component.scss
+++ b/src/app/core/navbar/navbar.component.scss
@@ -1,26 +1,32 @@
 .nav {
-  margin: auto;
-  height: 70px;
-  background: white;
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  box-shadow: 0 6px 10px -11px rgba(0, 0, 0, .7);
-  z-index: 1000;
-
   &-container {
-    width: 100%;
-    height: 100%;
     display: flex;
     align-items: center;
+    position: relative;
+    height: 100%;
+
+    .center {
+      padding: 1rem;
+      display: flex;
+      justify-content: center;
+      width: 6rem;
+
+      .nav-logo {
+        display: none;
+      }
+
+      .nav-menu-icon {
+        display: flex;
+      }
+    }
   }
 
   &-left {
     width: 300px;
     display: flex;
     align-items: center;
-    padding: 0 1rem;
+    justify-content: space-between;
+    height: 100%;
   }
 
   &-logo {
@@ -30,6 +36,10 @@
     img {
       width: 120px;
       height: 100%;
+
+      @media screen and (max-width: 568px) {
+        width: 100px;
+      }
     }
   }
 
@@ -38,13 +48,14 @@
     font-size: 1.2rem;
     color: #636363;
     cursor: pointer;
+    display: none;
   }
 
   &-center {
     height: 100%;
     display: flex;
     align-items: center;
-
+    background: red;
   }
 
   &-right {
@@ -52,8 +63,7 @@
     display: flex;
     align-items: center;
     margin-left: auto;
-    margin-right: .5rem;
-    position: relative;
+    margin-right: .8rem;
 
     .action-icon {
       display: flex;
@@ -75,13 +85,14 @@
     .account-action {
       position: absolute;
       padding: 1rem;
-      box-shadow: 5px 5px 4px rgba(19, 19, 19, .2);
+      box-shadow: 5px 5px 5px rgba(19, 19, 19, .2);
       background-color: white;
       right: .7rem;
-      top: 70px;
+      top: 71px;
       width: 250px;
       border-bottom-left-radius: 10px;
       border-bottom-right-radius: 10px;
+      z-index: 100;
 
       hr {
         margin: .5rem 0;
@@ -102,15 +113,16 @@
           margin-left: 1rem;
         }
       }
+
+      .sign-out {
+        cursor: pointer;
+        font-size: 1rem;
+        padding: .5rem 1rem;
+        color: #636363;
+        background: #cccccc;
+        border-radius: .4rem;
+      }
     }
   }
 }
 
-.sign-out {
-  cursor: pointer;
-  font-size: 1rem;
-  padding: .5rem;
-  color: #636363;
-  background: #cccccc;
-  border-radius: .4rem;
-}
